Fixed spacing schedule page

--- a/src/components/Schedule/Schedule.css
+++ b/src/components/Schedule/Schedule.css
@@ -3,31 +3,22 @@
     src: url(./assets/fonts/Inter/Inter-VariableFont_slnt,wght.ttf);
   }
 
-  /* ./assets/fonts/coolvetica/coolvetica\ rg.otf */
-
 .Schedule{
     background-color:#3b477a;
-    color:#FFFFFF;
     font-family: 'Coolvetica';
-    
-}
-
-.Events{
-    position: relative;
-    justify-content: center;
-    align-items: center;
+    padding-bottom:60px;
 }
 
 .scheduleTitle{
     font-size:30px;
     font-weight: bold;
-    /* left:0; */
-    margin-right: 1205px;
+    margin-right: 1505px;
+    padding-top:30px;
+    padding-left:30px;
+    color:#FFFFFF;
 }
 
-
-.eventItem{
-    /* line-height: 50px; */
+.event{
     height:90px;
     width:80px;
     border-radius: 10px;
@@ -50,10 +41,17 @@
     font-weight: bold;
 }
 
-
 .eventTitle{
     font-size:25px;
     font-weight:bold;
+    color:#FFFFFF;
 }
 
+hr{
+    border-color:#3b477a;
+    background-color:#3b477a;
+    border-radius: 0;
+    height: 1px; 
+    border: 0;
+}
 
